--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-make_admin/node_modules/
-make_admin/serviceAccountKey.json
-make_admin/.env
+makeadmin/node_modules/
+makeadmin/serviceAccountKey.json
+makeadmin/.env
