--- a/makeadmin/package.json
+++ b/makeadmin/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "testing",
+  "name": "makeadmin",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "admin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
